# projectEuXXr

./: .gitignore  Makefile  README.md  genSolvedHTML.py  getPuzzles.py  params.txt
c/: Makefile  run.sh
c/hackerrank_in/: 005.txt  011.txt
c/solved/: 001.c  003.c  005.c  006.c  008.c  009.c  011.c  012.c  013.c  014.c  015.c  018.c  020.c  022.c  024.c  025.c  026.c  029.c  030.c  099.c  README.md
include/: Array.h  numbers.h  primes.c  primes.h
rust/: Cargo.toml
rust/src/: 59.rs  63.rs  81.rs
solved/: 001.c  004.c  005.c  015.c  016.c  017.c  023.c  026.c  027.c  028.c  031.c  032.c  045.c  048.c  099.c  1.c  10.c  12.c  2.c  21.c  3.c  4.c  5.c  67.c  7.c  9.c  99.c  README.md
