[package]
name = "rust"
version = "0.1.0"
authors = ["Paul Würtz <paulwuertz@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "59"
path = "src/59.rs"

[[bin]]
name = "63"
path = "src/63.rs"

[[bin]]
name = "81"
path = "src/81.rs"

[[bin]]
name = "85"
path = "src/85.rs"